[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust"
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=1.80.1"
flutter_rust_bridge_macros = "=1.80.1"
